@@ -276,6 +276,7 @@ public class RdbFolderSQLInterface implements FolderSQLInterface {
 				final long createTime = System.currentTimeMillis();
 				manager.createFolder(folderobject, false, createTime);
 			} else {
+				folderobject.fill(oxfolderAccess.getFolderObject(folderobject.getObjectID()), false);
 				if (!folderobject.exists(ctx)) {
 					throw new OXFolderNotFoundException(folderobject.getObjectID(), ctx.getContextId());
 				}
@@ -326,9 +327,7 @@ public class RdbFolderSQLInterface implements FolderSQLInterface {
 	 */
 	public int deleteFolderObject(final FolderObject folderobject, final Date clientLastModified) throws OXException {
 		try {
-			if (!folderobject.containsType()) {
-				folderobject.setType(oxfolderAccess.getFolderType(folderobject.getObjectID()));
-			}
+			folderobject.fill(oxfolderAccess.getFolderObject(folderobject.getObjectID()), false);
 			if (folderobject.getType() == FolderObject.PUBLIC
 					&& !sessionObj.getUserConfiguration().hasFullPublicFolderAccess()) {
 				throw new OXFolderException(FolderCode.NO_PUBLIC_FOLDER_WRITE_ACCESS,
@@ -344,9 +343,6 @@ public class RdbFolderSQLInterface implements FolderSQLInterface {
 			}
 			final EffectivePermission effectivePerm = folderobject.getEffectiveUserPermission(userId, sessionObj
 					.getUserConfiguration());
-			if (!folderobject.containsModule()) {
-				folderobject.setModule(oxfolderAccess.getFolderModule(folderobject.getObjectID()));
-			}
 			if (!effectivePerm.hasModuleAccess(folderobject.getModule())) {
 				throw new OXFolderException(FolderCode.NO_MODULE_ACCESS, getUserName(sessionObj),
 						folderModule2String(folderobject.getModule()), Integer.valueOf(ctx.getContextId()));
